--- a/web/src/components/Post/style.scss
+++ b/web/src/components/Post/style.scss
@@ -1,3 +1,12 @@
+.link {
+    color: black;
+
+    &:hover {
+        color: gray;
+        text-decoration: none;
+    }
+}
+
 .tag-link {
     color: white;
 
