--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -1,5 +1,12 @@
+@import '../../node_modules/bootstrap/dist/css/bootstrap.min.css';
+
 html,
 body {
+  background: url("/images/fundo1.jpg");
+  height: 100hv;
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -13,4 +20,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.plus {
+  font-size: 20px;
 }
